[main] Update width layout

--- a/src/app/presentation/components/category-list/category-list.component.less
+++ b/src/app/presentation/components/category-list/category-list.component.less
@@ -143,10 +143,45 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 1024px) {
   .category-list-container, .empty-container {
-    min-width: 90%;
     margin: 0 auto 15px;
-    padding: 15px;
+    width: 1000px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .category-list-container, .empty-container {
+    margin: 0 auto 15px;
+    width: 730px;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 767px) {
+  .category-list-container, .empty-container {
+    margin: 0 auto 15px;
+    width: 630px;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 639px) {
+  .category-list-container, .empty-container {
+    margin: 0 auto 15px;
+    width: 490px;
+  }
+}
+
+
+@media (min-width: 440px) and (max-width: 499px) {
+  .category-list-container, .empty-container {
+    margin: 0 auto 15px;
+    width: 430px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 420px){
+  .category-list-container, .empty-container {
+    margin: 0 auto 15px;
+    width: 310px;
   }
 }
