--- a/src/app/presentation/components/category-card/category-card.component.html
+++ b/src/app/presentation/components/category-card/category-card.component.html
@@ -1,5 +1,6 @@
 @let categoryData = category();
 @let isUpdatingVisibilityState = isUpdatingVisibility();
+@let isUpdatingCategoryState = isUpdatingCategoryData();
 
 @if (categoryData) {
     <div
@@ -7,7 +8,7 @@
         [class.hidden-category]="!categoryData.isVisibleForCurrentUser"
     >
         <mat-card>
-            @if (isUpdatingVisibilityState) {
+            @if (isUpdatingVisibilityState || isUpdatingCategoryState) {
                 <div class="visibility-updating-overlay">
                     <mat-spinner diameter="30"></mat-spinner>
                 </div>
@@ -76,7 +77,7 @@
                     )
                 "
                 aria-label="Kategorie sichtbarkeit ändern"
-                [disabled]="isUpdatingVisibilityState"
+                [disabled]="isUpdatingVisibilityState || isUpdatingCategoryState"
             >
                 <mat-icon class="visibility-icon">
                     {{ categoryData.isVisibleForCurrentUser ? 'visibility' : 'visibility_off' }}
@@ -84,9 +85,19 @@
             </button>
 
             <button
+                class="edit-button"
+                (click)="onEditCategory($event)"
+                aria-label="Kategorie bearbeiten"
+                [disabled]="isUpdatingVisibilityState || isUpdatingCategoryState"
+            >
+                <mat-icon class="edit-icon">edit</mat-icon>
+            </button>
+
+            <button
                 class="delete-button"
                 (click)="onDeleteCategory($event)"
                 aria-label="Kategorie löschen"
+                [disabled]="isUpdatingVisibilityState || isUpdatingCategoryState"
             >
                 <mat-icon class="delete-icon">delete</mat-icon>
             </button>
@@ -101,6 +112,18 @@
             }"
             (confirmDelete)="confirmDelete($event)"
             (cancelDelete)="closeDeleteModal()"
+        />
+    </app-modal-wrapper>
+
+    <app-modal-wrapper [isOpen]="isEditModalOpen()" (close)="closeEditModal()">
+        <app-category-edit-form
+            [categoryData]="{
+                categoryName: categoryData.name || '',
+                categoryEmoji: categoryData.emoji || '',
+                categoryId: categoryData.id || 0,
+            }"
+            (confirmEdit)="confirmEdit($event)"
+            (cancelEdit)="closeEditModal()"
         />
     </app-modal-wrapper>
 }
