--- a/src/app/presentation/components/category-card/category-card.component.less
+++ b/src/app/presentation/components/category-card/category-card.component.less
@@ -130,7 +130,7 @@ mat-card-content {
   z-index: 2;
 }
 
-.delete-button, .visibility-button {
+.delete-button, .visibility-button, .edit-button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -175,7 +175,12 @@ mat-card-content {
   opacity: 1;
 }
 
-.delete-icon, .visibility-icon {
+.edit-button:hover .edit-icon {
+  color: var(--ut-orange);
+  opacity: 1;
+}
+
+.delete-icon, .visibility-icon, .edit-icon {
   color: var(--card-text);
   opacity: 0.5;
   transition: all 0.2s ease;
