--- a/src/app/presentation/components/category-list/category-list.component.html
+++ b/src/app/presentation/components/category-list/category-list.component.html
@@ -32,6 +32,7 @@
                             [expanded]="isPanelExpanded(category.id)"
                             (toggleExpand)="togglePanel($event)"
                             (deleteCategory)="onDeleteCategory($event)"
+                            (editCategory)="onEditCategory($event)"
                         />
                     }
                 </div>
