--- a/src/app/presentation/components/category-item/category-item.component.less
+++ b/src/app/presentation/components/category-item/category-item.component.less
@@ -10,7 +10,6 @@
 
   &:hover {
     background-color: var(--item-hover);
-    cursor: pointer;
     transform: translateX(3px);
   }
 
@@ -18,6 +17,15 @@
     background-color: var(--item-active);
     transform: translateX(5px);
   }
+}
+
+.item-content {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  gap: 14px;
+  cursor: pointer;
+  transition: all 0.2s ease;
 }
 
 .item-emoji {
