--- a/src/app/presentation/components/category-list/category-list.component.html
+++ b/src/app/presentation/components/category-list/category-list.component.html
@@ -34,6 +34,7 @@
                             (deleteCategory)="onDeleteCategory($event)"
                             (editCategory)="onEditCategory($event)"
                             (editItemQuantity)="onEditItemQuantity($event)"
+                            (editItemData)="onEditItemData($event)"
                         />
                     }
                 </div>
